--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
+#duong dan ban dau
+#server.servlet.context-path=/home
+#cong de chay
+server.port=8080
+# cau hinh file up load
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.servlet.session.tracking-modes=cookie
+#cau hinh duong dan
+#spring.resources.static-locations=classpath:/static/
+#spring.mvc.static-path-pattern=/public/**
+#Cau hinh sai jsp
+#spring.mvc.view.prefix=/pages/
+#spring.mvc.view.suffix=.jsp
+#cau hinh sai message.properties
+spring.messages.basename=msg/messages
+#jdbc
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.username=root
+spring.datasource.password=
+#pring.jpa.hibernate.ddl-auto=create-drop
+#jpa
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
+# cau hinh goi email
+spring.mail.username=registerdjango@gmail.com
+spring.mail.password=nguyenanhtuan
+spring.mail.host=smtp.gmail.com
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
