--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.messages.basename=msg/messages
 spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=root
 spring.datasource.password=
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.test-on-borrow=true
@@ -27,9 +27,10 @@ spring.datasource.tomcat.test-on-borrow=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 # cau hinh goi email
-spring.mail.username=registerdjango@gmail.com
+spring.mail.port=587
+spring.mail.username=registerspringboot@gmail.com
 spring.mail.password=nguyenanhtuan
 spring.mail.host=smtp.gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+security.basic.enabled=false
