--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.messages.basename=msg/messages
 spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.test-on-borrow=true
@@ -33,4 +33,5 @@ spring.mail.password=nguyenanhtuan
 spring.mail.host=smtp.gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-security.basic.enabled=false
+
+#security.ignored=/**
