--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.messages.basename=msg/messages
 #jdbc
 spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=30121999
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=50
