--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #duong dan ban dau
 #server.servlet.context-path=/home
 #cong de chay
-server.port=8080
+server.port=3306
 # cau hinh file up load
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
@@ -15,9 +15,11 @@ server.servlet.session.tracking-modes=cookie
 #cau hinh sai message.properties
 spring.messages.basename=msg/messages
 #jdbc
-spring.datasource.url=jdbc:mysql://localhost:3306/db
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6410701
+spring.datasource.username=sql6410701
+spring.datasource.password=ENr6ezW9wX
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=50
