--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6410701
 #spring.datasource.username=sql6410701
 #spring.datasource.password=ENr6ezW9wX
-spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/freedbtech_xebeto
-spring.datasource.username=sql6410701
-spring.datasource.password=ENr6ezW9wX
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url = jdbc:mysql://freedb.tech:3306/freedbtech_xebeto
+spring.datasource.username=freedbtech_xebeto
+spring.datasource.password=a
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.test-on-borrow=true
