--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.messages.basename=msg/messages
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=30121999
 #spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6410701
 #spring.datasource.username=sql6410701
 #spring.datasource.password=ENr6ezW9wX
