--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,15 +16,15 @@ server.servlet.session.tracking-modes=cookie
 spring.messages.basename=msg/messages
 #jdbc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/db
+#spring.datasource.username=root
+#spring.datasource.password=
 #spring.datasource.url = jdbc:mysql://sql6.freemysqlhosting.net:3306/sql6410701
 #spring.datasource.username=sql6410701
 #spring.datasource.password=ENr6ezW9wX
-#spring.datasource.url = jdbc:mysql://freedb.tech:3306/freedbtech_xebeto
-#spring.datasource.username=freedbtech_xebeto
-#spring.datasource.password=a
+spring.datasource.url = jdbc:mysql://freedb.tech:3306/freedbtech_xebeto
+spring.datasource.username=freedbtech_xebeto
+spring.datasource.password=a
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=50
